--- a/final_project.qmd
+++ b/final_project.qmd
@@ -18,11 +18,11 @@ execute:
 
 # Introduction
 
-We were interested in investigating the relationship between gross domestic product (GDP) per capita and the sustainable development index (SDI). Gross domestic product (GDP) per capita is a metric that provides a monetary sum of the services and goods outputted from a country per person (FocusEconomics, 2025). SDI measures how efficient a countries developments are (Sustanable Development Index, 2025). Before forming a hypothesis about the relationship between these two variables, we investigated development in different countries. We found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (Robeco.com, 2024). We found a sector of research investigating the relationship between the rich and climate change and how they are leading to rapid climate change (Paddison, 2021). Additionally, this stemmed into articles discussing whether the rich have a responsibility to pay for their impact on climate change (Gharib, 2021). Additionally, there is a larger gap in sustainability efforts of richer countries compared to poorer countries (Sexton, 2023). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
+We were interested in investigating the relationship between gross domestic product (GDP) per capita and the sustainable development index (SDI). GDP per capita is a metric that provides a monetary sum of the services and goods outputted from a country per person (FocusEconomics, 2025). SDI measures how efficient a countries developments are (Sustanable Development Index, 2025). Before forming a hypothesis about the relationship between these two variables, we investigated development in different countries. We found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (Robeco.com, 2024). We found a sector of research investigating the relationship between the rich and climate change and how they are leading to rapid climate change (Paddison, 2021). Additionally, this stemmed into articles discussing whether the rich have a responsibility to pay for their impact on climate change (Gharib, 2021). Additionally, there is a larger gap in sustainability efforts of richer countries compared to poorer countries (Sexton, 2023). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
 
 **For these reasons and due to our preliminary research that we conducted we hypothesized that countries with higher gross domestic product (GDP) per capita** **will have higher sustainability scores. Additionally, we hypothesized that there is a positive correlation between country wealth and sustainability score of countries.**
 
-After completing this report we hope to provide an analysis of the relationship between gross domestic product (GDP) per capita and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's gross domestic product (GDP) per capita.
+After completing this report we hope to provide an analysis of the relationship between GDP per capita and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP per capita.
 
 # Data Description
 
@@ -36,7 +36,7 @@ library(scales) #for formatting p-values
 library(broom)
 ```
 
-We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per Capita was sourced from. The explanatory variable we were interested in is GDP per Capita (GDP Per Capita, GapMinder) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (GDP Per Capita, WorldBank), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (Madison Project Database, 2024), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (PWT, 2024), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (Lindgen, 2011). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
+We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per capita was sourced from. The explanatory variable we were interested in is GDP per capita (GDP Per Capita, GapMinder) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (GDP Per Capita, WorldBank), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (Madison Project Database, 2024), which offers historical GDP per capita estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (PWT, 2024), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP per capita v26 and earlier versions (Lindgen, 2011). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
 
 The second dataset is where the sustainable development index was sourced from. The response variable we were interested in is the Sustainable Development Index (U. Jean, 2021) from 1990-2019. The Sustainable Development Index is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder.
 
@@ -94,11 +94,11 @@ df.clean |>
 
 Our dataset includes four variables (Country, Year, SDI and GDP per capita) with a total of 2,306 observations. Note that each observation is identified by a country and year (e.g. Ethiopia, 2018).
 
-We excluded observations missing SDI or GDP data, as these missing values occurred due to the datasets covering additional years not present in the other. For example, the SDI dataset covered only 1990–2019, whereas the GDP dataset spaned 1800–2100. Therefore, GDP values exist for years where SDI data does not, and vice versa.
+We excluded observations missing SDI or GDP per capita data, as these missing values occurred due to the datasets covering additional years not present in the other. For example, the SDI dataset covered only 1990–2019, whereas the GDP per capita dataset spanned 1800–2100. Therefore, GDP per capita values exist for years where SDI data does not, and vice versa.
 
-The GDP dataset included hypothetical data until the year 2100. We did not want to focus on hypothetical data for this report and we wanted to ensure consistency across datasets. Therefore, we did not include any years past 2019 and before 1990. When the GDP and SDI datasets were combined we constrained the data to match the years in the SDI dataset.
+The GDP per capita dataset included hypothetical data until the year 2100. We did not want to focus on hypothetical data for this report and we wanted to ensure consistency across datasets. Therefore, we did not include any years past 2019 and before 1990. When the GDP per capita and SDI datasets were combined we constrained the data to match the years in the SDI dataset.
 
-When data cleaning, removing missing SDI or GDP data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu. Important to note, Belarus and North Korea were not included in the data at all.
+When data cleaning, removing missing SDI or GDP per capita data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu. Important to note, Belarus and North Korea were not included in the data at all.
 
 # Modeling and Relationship Between Sustainability (SDI) and GDP per capita
 
@@ -106,7 +106,7 @@ When data cleaning, removing missing SDI or GDP data mainly affected small or po
 
 In the following plots, we have decided to take the mean GDP per capita across the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
 
-The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and gross domestic product per capita for a country averaged over the years 1990 to 2019. The form of the relationship appears quadratic due to the predominate curve at 10,000 dollars for GDP per capita. The direction is positive before 10,000 dollars for GDP per capita and negative after 10,000 dollars for GDP per capita. The strength is strong before 10,000 dollars for GDP per capita with increasing scatter after 10,000 dollars for GDP per capita making it relatively weak. Overall, there does not appear to be any unusual observations.
+The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and GDP per capita for a country averaged over the years 1990 to 2019. The form of the relationship appears quadratic due to the predominate curve at 10,000 dollars for GDP per capita. The direction is positive before 10,000 dollars for GDP per capita and negative after 10,000 dollars for GDP per capita. The strength is strong before 10,000 dollars for GDP per capita with increasing scatter after 10,000 dollars for GDP per capita making it relatively weak. Overall, there does not appear to be any unusual observations.
 
 ```{r}
 df.clean |> 
@@ -121,7 +121,7 @@ df.clean |>
   labs(x = "GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI)", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
 ```
 
-To enhance the readability of our previous plot we made some adjustments. The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 with a graphical separation between GDP per capita for high (greater than or equal to 20000 dollars) and low (less than 20000 dollars) GDP per capita. The form of the relationship appears linear for the high and low GDP plots. The direction is negative for high GDP per capita and positive for low GDP per capita. The strength of both is moderately strong. Overall, there does not appear to be any unusual observations in either plots.
+To enhance the readability of our previous plot we made some adjustments. The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of GDP per capita for a country averaged over the years 1990 to 2019 with a graphical separation between GDP per capita for high (greater than or equal to 20000 dollars) and low (less than 20000 dollars) GDP per capita. The form of the relationship appears linear for the high and low GDP plots. The direction is negative for high GDP per capita and positive for low GDP per capita. The strength of both is moderately strong. Overall, there does not appear to be any unusual observations in either plots.
 
 ```{r}
 #preliminary scatterplot
@@ -135,7 +135,7 @@ df.clean |>
   facet_grid(~gdp_class) +
   geom_smooth(method = "lm") +
   theme_minimal() +
-  labs(x = "GDP per Capita (2017 dollars)", 
+  labs(x = "Natural Log of GDP per Capita (2017 dollars)", 
        y = "", 
        subtitle = "Sustainable Development Index (SDI)", 
        title = "Relationship between GDP per capita and Sustainability (SDI) 
@@ -159,7 +159,7 @@ df.clean |>
 
 ```
 
-The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of GDP per capita for high (greater than or equal to 20000 dollars) GDP per capita countries over the years 1990 to 2019. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in the plot. Over time, the frames representing each year shift down and to the right meaning that the sustainability index decreased and the GDP per Capita in 2017 dollars increased.
+The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of GDP per capita for high (greater than or equal to 20000 dollars) GDP per capita countries over the years 1990 to 2019. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in the natural log of GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in the plot. Over time, the frames representing each year shift down and to the right meaning that the sustainability index decreased and the natural log of GDP per capita in 2017 dollars increased.
 
 ```{r}
 df.clean |> 
@@ -173,7 +173,7 @@ df.clean |>
   transition_time(year)+
   ease_aes('linear')+
   theme_minimal() +
-  labs(x = "GDP per Capita (2017 dollars)", 
+  labs(x = "Natural Log of GDP per Capita (2017 dollars)", 
   y = "Sustainable Development Index (SDI)", 
   subtitle = "Year: {frame_time}",
   title = "Change over time in the relationship between GDP per capita and \n sustainability (SDI) from 1990 to 2019")+
@@ -182,21 +182,15 @@ df.clean |>
 
 ## 2.2. Linear Regression
 
-As mentioned previously, we have decided to take the mean GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
+As mentioned previously, we have decided to take the mean natural log GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
 
-The statistical method that we selected was the simple linear regression because our data generally has a simple linear form. A simple linear regression assumes that the relationship between the natural log of the GDP per capita and the sustainability development index has a linear function.
+The statistical method that we selected was the simple linear regression because our data generally has a simple linear form. A simple linear regression assumes that the relationship between the GDP per capita and the sustainability development index has a linear function.
 
 The estimated regression model follows the following notation:
 
-$$\hat{y} = \hat\beta_0 + \hat\beta_1x + \epsilon$$
+$$\hat{y} = \hat\beta_0 + \hat\beta_1x $$
 
-$$\hat{y} = 73.18758 - 0.00067x_i$$ where the $$\hat{y}$$ is the estimated sustainability development index and $$x_i$$ is the country's GDP per capita in 2017 dollars.
-
-The linear regression model coefficients are as follows:
-
-The intercept of 73.18758 indicates when a country's GDP per capita is 0 dollars, the country's sustainability index is 73.18758 units.
-
-The slope is -0.00067. We estimate that for every 10,000 increase in a county's GDP per capita, their sustainability development index will decrease by 6.7 units.
+$$\hat{y} = 73.18758 - 0.00067x_i$$The $\hat{y}$ is the estimated sustainability development index and $x_i$ is the country's GDP per capita in 2017 dollars. The intercept indicates that a country with GDP per capita of 0 dollars has a predicted sustainability index of 73.18758 units. For every 10,000 2017 dollar increase in a country's GDP per capita, the predicted sustainability index score decreases by 6.7 units.
 
 ```{r}
 df.clean.model <- df.clean |> 
@@ -219,11 +213,11 @@ summary(lm.model) |>
 
 ### Assumptions
 
-1.  **Linear Relationship** - when the data is subsetted to only include high (greater than or equal to 20000 dollars) GDP per capita, the relationship is linear.
+1.  **Linear Relationship** - When the data is subsetted to only include high (greater than or equal to 20000 dollars) GDP per capita, the relationship is linear.
 
-2.  **Independent Observations** - the observations (identified by each country and year) are reasonably independent.
+2.  **Independent Observations** - The observations (identified by each country and year) are reasonably independent.
 
-3.  **Normally Distributed Residuals** - the residuals (difference between the predicted and observed data) are roughly normally distributed (bell-shaped curve).
+3.  **Normally Distributed Residuals** - The residuals (difference between the predicted and observed data) are roughly normally distributed (bell-shaped curve).
 
     ```{r}
     ggplot(data = lm.model,
@@ -234,7 +228,7 @@ summary(lm.model) |>
       xlab("Residuals")
     ```
 
-4.  **Equal Variance of Residuals** - the residuals are roughly spaced out evenly with respect to the fitted values (values along the line).
+4.  **Equal Variance of Residuals** - The residuals are roughly spaced out evenly with respect to the fitted values (values along the line).
 
     ```{r}
     lm.model |> 
@@ -248,7 +242,7 @@ summary(lm.model) |>
 
 ## 2.3 Model Fit
 
-The linear regression model explains about 39% (fitted variance: 98.56726) of the total variance (251.129) in sustainability (SDI). This R-squared value (fitted variance/total variance) is considered to be relatively low, indicating that the quality of the model is less than ideal. Additionally, the standard deviation of the residuals (sigma) is 12.5, indicating that there is a fair amount of variability in the residuals.
+The linear regression model explains about 39% (fitted variance: 98.56726) of the total variance (251.129) in sustainability (SDI). This R-squared value (fitted variance/total variance) is considered to be relatively low, indicating that the quality of the model is less than ideal. Additionally, the mean standard deviation of the residuals (sigma) is 12.5, indicating that there is a fair amount of variability in the residuals.
 
 ```{r}
 lm.model |> 
@@ -318,7 +312,8 @@ kfoldcv <- map_dbl(.x = 1:4,
 mean.r2 <- mean(kfoldcv)
 
 ```
-Our implementation used 4-fold cross-validation with all of the high GDP countries (GDP > $20,000). We chose 4 folds to ensure each fold contained approximately 11-12 countries, meeting the minimum requirement of at least 10 observations per fold for reliable statistical inference. The map_dbl() function applied our cross-validation function to each fold, training the linear regression model on 75% of the data and testing on the remaining 25% for each iteration.
+
+Our implementation used 4-fold cross-validation with all of the high GDP countries (GDP \> \$20,000). We chose 4 folds to ensure each fold contained approximately 11-12 countries, meeting the minimum requirement of at least 10 observations per fold for reliable statistical inference. The map_dbl() function applied our cross-validation function to each fold, training the linear regression model on 75% of the data and testing on the remaining 25% for each iteration.
 
 ## 3.2 Plot the Results
 
@@ -326,7 +321,8 @@ Our implementation used 4-fold cross-validation with all of the high GDP countri
 kfoldcv |> 
   as.data.frame() |> 
   rename(R2 = kfoldcv) |> 
-  mutate(k = 1:4, .before = R2) |> 
+  mutate(k = c("1", "2", "3", "4"), .before = R2, 
+         k = fct(k)) |> 
   ggplot(aes(x = k,
              y = R2)) + 
   geom_point()+
@@ -344,6 +340,7 @@ kfoldcv |>
        title = "K-fold Cross-Validation")
   
 ```
+
 ```{r}
 
 high_gdp_data <- df.clean |>
@@ -367,15 +364,15 @@ The plot reveals considerable variation in model performance across the four fol
 
 The cross-validation R² (0.488) is higher than the original linear regression R² (0.392), and one fold achieves an R² above 1.0. While this might initially suggest overfitting, it's more likely due to the small sample sizes in each fold and the specific R² calculation method used (variance of predictions divided by variance of outcomes).
 
-The cross-validation results reveal important limitations for practical application of our model. The wide performance variation (R² ranging from ~0.20 to 1.18 across folds) suggests our model may not be reliable for predicting sustainability outcomes for individual wealthy countries. This inconsistency indicates that country-specific factors beyond GDP per capita play crucial roles in determining sustainability performance among high-income nations. While the model captures the general inverse relationship on average, practitioners should exercise caution when using it for policy predictions or country-specific assessments, as the model's effectiveness appears highly dependent on which subset of wealthy countries is being analyzed.
+The cross-validation results reveal important limitations for practical application of our model. The wide performance variation (R² ranging from \~0.20 to 1.18 across folds) suggests our model may not be reliable for predicting sustainability outcomes for individual wealthy countries. This inconsistency indicates that country-specific factors beyond GDP per capita play crucial roles in determining sustainability performance among high-income nations. While the model captures the general inverse relationship on average, practitioners should exercise caution when using it for policy predictions or country-specific assessments, as the model's effectiveness appears highly dependent on which subset of wealthy countries is being analyzed.
 
 # 4. Conclusion
 
-R2 From Linear Regression = 0.392
+R² From Linear Regression = 0.392
 
-R2 from K-fold Cross-Validation = 0.488
+R² from K-fold Cross-Validation = 0.488
 
-Our analysis examined the relationship between GDP per capita and sustainability (SDI) among wealthy nations using linear regression modeling. The linear regression revealed a statistically significant negative relationship, with the model explaining 39% of the variance in sustainability scores. Specifically, for every $10,000 increase in GDP per capita, sustainability scores decrease by approximately 6.7 units among high GDP countries.
+Our analysis examined the relationship between GDP per capita and sustainability (SDI) among wealthy nations using linear regression modeling. The linear regression revealed a statistically significant negative relationship, with the model explaining 39% of the variance in sustainability scores. Specifically, for every \$10,000 increase in GDP per capita, sustainability scores decrease by approximately 6.7 units among high GDP countries.
 
 The cross-validation analysis provided additional insights into model performance and reliability. While the average cross-validation R² of 0.488 suggests reasonable predictive power, the high variability across folds raises concerns about the model's reliability and generalizability. The inconsistent performance suggests that factors beyond GDP per capita may play varying roles in different subsets of wealthy countries, or that the linear relationship assumption may not hold equally well across all high GDP nations.
 
